# android_run_1.0

./: .cursorrules  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  README_zh.md  commitlint.config.js  kill-processes.bat  lint-staged.config.mjs  package-lock.json  package.json  pyproject.toml  restart-app.bat  test_ai_server.bat
.claude/: settings.local.json
.claude/agents/: bug-documentation-specialist.md  bug-fixer.md  docs-sync-keeper.md  feature-implementer.md  git-merge-coordinator.md
.github/workflows/: ci.yml
.husky/: commit-msg  pre-commit  pre-push
demo_run/: start_android_demo.py
diagnostic_reports/: README.md
docs/: INDEX.md  followup-recovery-mechanism-enhancement.md
docs/00-boss-pivot/: README.md  tdd-workflow.md
docs/00-meta/: PROJECT-REORGANIZATION.md  folder-structure.md  how-we-document.md  link-fix-report-2026-02-05.md  migration-report-2026-02-05.md  prompt-style-guide.md
docs/01-product/: 2025-12-08-ai-reply-integration.md  2025-12-08-device-kefu-auto-init.md  2025-12-08-device-phone-frame-screenshot.md  2025-12-08-sidecar-generate-button.md  2025-12-09-agent-device-consolidation.md  2025-12-09-dashboard-vertical-highlight.md  2025-12-09-dashboard-visual-enhancements.md  2025-12-09-message-trends-line-chart.md  2025-12-09-sidecar-conversation-history.md  2025-12-09-ui-terminology-rename.md  2025-12-11-sidecar-sync-controls.md  2025-12-11-streamers-database-persona-analysis.md  2025-12-12-entity-deletion.md  2025-12-12-resources-media-browser.md  2025-12-15-inline-video-downloading.md  2025-12-15-voice-message-download.md  2025-12-16-device-init-messages-view-verification.md  2025-12-16-restart-wecom-if-not-on-messages.md  2025-12-16-verify-messages-screen.md  2025-12-16-volcengine-asr-test-button.md  2026-02-01-admin-actions-backup-service.md  2026-02-02-followup-attempt-intervals.md  2026-02-04-followup-search-input-improvement.md  2026-02-05-followup-additional-improvements.md  2026-02-05-followup-error-handling-improvements.md  2026-02-05-followup-search-button-resource-id-detection.md  2026-02-05-followup-search-query-normalization.md  2026-02-05-followup-skip-handling-refactor.md  2026-02-05-ui-improvements.md  README.md  ai-multi-message-reply.md  auto-save-logs.md  blacklist-system-backend.md  blacklist-system-frontend.md  blacklist-system.md  followup-attempt-intervals.md  followup-blacklist-integration.md  followup-deduplication-feature.md  followup-mechanism-explained.md  i18n-implementation.md  (+7 more)
docs/03-impl-and-arch/: README.md  avatar-storage-design.md  followup-realtime-separation-status.md  系统架构分析报告.md
docs/04-bugs-and-fixes/: FOLLOWUP_BLACKLIST_FIX_GUIDE.md  README.md
docs/07-appendix/: log.md  (+9 more)
openspec/: AGENTS.md
scripts/: add_hostname_setting.py  boss_e2e_live.py  boss_smoke.py  check_async_nonblocking.py  check_log_health.py  cleanup_blacklisted_followup_attempts.py  cleanup_fake_contact_share_2026_05_06.py  configure_log_upload.py  diagnose_group_invite.py  dump_boss_ui.py  e2e_verify_contact_picker_state.py  fix_low_spec_mode.py  run_group_invite_e2e.py  run_group_invite_full.py  run_group_invite_quick.py  scan_followup_progress.py
tests/: __init__.py  conftest.py  manual_email_test.py
wecom-desktop/: .eslintrc.cjs  .prettierignore  .prettierrc  README.md  electron.vite.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  test-ai-server.html  tsconfig.json  tsconfig.node.json  vite.config.ts
(+839 files in other folders)
