[project]
name = "wecom-automation"
version = "0.2.1"
description = "Modular automation framework for WeCom on Android devices via DroidRun."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "WeCom Automation Team"}
]
keywords = ["wecom", "android", "automation", "droidrun", "adb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware :: Hardware Drivers",
]

dependencies = [
    "adbutils>=2.12.0",
    "droidrun<=0.4.13",
    "fastapi>=0.115.0",
    "loguru>=0.7.0",
    "openpyxl>=3.1.5",
    "pilk>=0.2.4",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.38.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
wecom-automation = "wecom_automation.cli.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wecom_automation"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require device connection)",
]

[tool.coverage.run]
source = ["src/wecom_automation"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# Ruff configuration (fast Python linter and formatter)
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "wecom-desktop/backend"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "B905",   # zip() without an explicit strict= parameter
    "E741",   # Ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**" = ["B011"]     # Allow assert in tests
"wecom-desktop/backend/main.py" = ["E402"]  # Path setup before imports
"wecom-desktop/backend/scripts/*" = ["E402"]  # Path setup before imports
"wecom-desktop/backend/services/followup/response_detector.py" = ["E402"]  # Path setup before imports
"wecom-desktop/backend/tests/test_logs_ws.py" = ["E402"]  # sys.path bootstrap before router imports
"tests/integration/test_contact_search_e2e.py" = ["E402"]  # sys.path bootstrap before imports
"tests/integration/test_full_image_to_card_dry_run_e2e.py" = ["E402"]  # sys.path bootstrap before imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
